# feastream

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
cockpit-ts/: next.config.js  package.json
cockpit-ts/app/: layout.tsx  page.tsx
compute-rust/: Cargo.toml  Dockerfile
compute-rust/src/: lib.rs  main.rs  window.rs
compute-rust/tests/: aggregate.rs
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
gateway-go/: Dockerfile  go.mod  main.go
gateway-go/internal/config/: config.go
gateway-go/internal/hub/: hub.go
gateway-go/internal/pipeline/: pipeline.go  pipeline_test.go
gateway-go/internal/ring/: ring.go  ring_test.go
inference-python/: Dockerfile  README.md  pyproject.toml
inference-python/feastream_infer/: __init__.py  cli.py  demo.py  evaluate.py  gbdt.py  model.py  service.py  synth.py
inference-python/tests/: test_gbdt.py  test_model.py
proto/: protocol.md
scripts/: verify.py
