[package]
name = "feastream_compute"
version = "0.1.0"
edition = "2021"
description = "Sliding-window feature aggregator for feastream"
license = "MIT"

[[bin]]
name = "feastream-compute"
path = "src/main.rs"

[lib]
name = "feastream_compute"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
